# PyAdder

./: .coveragerc  .gitignore  .travis.yml  CHANGES.txt  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
.travis/: run.sh
adder/: __init__.py
adder/tests/: __init__.py  test_one_number.py
